refactor: Update returning types to more concise
